--- a/M2/goh31.gradle
+++ b/M2/goh31.gradle
@@ -3,12 +3,12 @@ defaultTasks 'jar'
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'lib', include: '*.jar')
+    compile fileTree(dir: 'lib' , include : '*.jar')
 }
 
 jar {
     manifest {
-        'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain',
-        'Class-Path' : '../../lib/resources.jar'
+        attributes 'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain',
+            'Class-Path' : '../../lib/resources.jar'
     }
 }
